--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+        <!--CV -->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv</artifactId>
+            <version>1.1</version>
+        </dependency>
+
         <!--Convert logs to logstash compatible format-->
         <dependency>
             <groupId>net.logstash.logback</groupId>
